meningfull message added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 <ul>
                 <li>About Us </li>
                 <li>Developers </li>
-                <button class="nav-button">Follow Us On </button>
+                <button class="nav-button">Follow Us On <i class="fa-brands fa-youtube fa-beat-fade"
+                    style="color: #df0707;"></i>
+                <i class="fa-brands fa-tiktok fa-beat-fade"></i></button>
             </ul>
             </div>
         </div> 
@@ -41,9 +43,13 @@
                 <div class="banner-text">
                     <h2 class="head-title2">PLAY LIKE THE</h2>
                 <h1 class="head-title">G.O.A.T.</h1>
-                <p class="banner-ds">1-Click instant play <br>
+                <!-- <p class="banner-ds">1-Click instant play <br>
                 No Download <br>
-                1000s of supported online games <br></p>
+                1000s of supported online games <br></p> -->
+                <p><i class="fa-regular fa-circle-play fa-spin"></i> 1-Click instant play</p>
+                <p><i class="fa-solid fa-download fa-flip"></i> No Download</p>
+                <p><i class="fa-solid fa-people-line fa-shake"></i> 1000s of supported online games</p>
+
 
                 <button class="btn1">SIGN IN </button>
                 <button class="btn2">GO ROGUE</button>
@@ -118,7 +124,60 @@
 
 <!-- section 4 start -->
         
-        
+      <section>
+        <div class="div gamer-container">
+        <div class="button">
+            <img src="images/Rectangle 11.png" alt="">
+                <p>Puzzle Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 16.png" alt="">
+                <p>Educational Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 17.png" alt="">
+                <p>Role Palying Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 18.png" alt="">
+                <p>Music & Audio Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 18.png" alt="">
+                <p>Music & Audio Games</p>
+            </img>
+        </div>
+        <div class="button">
+            <img src="images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </img>
+        </div>
+    </div>
+      </section>  
 
 
 
